<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- downexample -->
    <string name="app_name">PK20Ble</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- ui -->
    <string name="main_btn1">业务员</string>
    <string name="main_btn2">网点</string>
    <string name="main_btn3">分拨</string>
    <string name="main_btn4">空运货代</string>

    <string name="courier_btn1">【1】揽收</string>
    <string name="courier_btn2">【2】揽收体积测量</string>
    <string name="courier_btn3">【3】揽收称重+体积测量</string>

    <string name="branch_btn4">【4】网点到件</string>
    <string name="branch_btn5">【5】网点收件+体积测量</string>
    <string name="branch_btn6">【6】网点收件+体积测量+称重</string>
    <string name="branch_btn7">【7】网点体积测量</string>
    <string name="branch_btn8">【8】网点发件</string>

    <string name="allocate_btn9">【9】中心收件+体积测量</string>
    <string name="allocate_btn10">【10】中心收件+体积测量+称重</string>
    <string name="allocate_btn11">【11】中心提及测量</string>

    <string name="air_btn12">【12】单位体积测量</string>
    <string name="air_btn13">【13】单位体积测量+称重</string>
    <string name="air_btn14">【14】单位合并体积测量</string>
    <string name="air_btn15">【15】单位合并体积测量+称重</string>
</resources>
