<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    >

    <Button
        android:id="@+id/btn4"
        android:text="@string/branch_btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn5"
        android:text="@string/branch_btn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn6"
        android:text="@string/branch_btn6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn7"
        android:text="@string/branch_btn7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn8"
        android:text="@string/branch_btn8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
