<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    >

    <Button
        android:id="@+id/btn12"
        android:text="@string/air_btn12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn13"
        android:text="@string/air_btn13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn14"
        android:text="@string/air_btn14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn15"
        android:text="@string/air_btn15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
