<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    >

    <Button
        android:id="@+id/btn1"
        android:text="@string/courier_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn2"
        android:text="@string/courier_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn3"
        android:text="@string/courier_btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
