<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    >

    <Button
        android:id="@+id/btn9"
        android:text="@string/allocate_btn9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn10"
        android:text="@string/allocate_btn10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn11"
        android:text="@string/allocate_btn11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
